regression/fail/duplicate-tyvar.sml
type ('a, 'a) t = unit
